--- a/app.py.save.1
+++ b/app.py.save.1
@@ -69,8 +69,9 @@ def register_recipe():
     recipe_df = psql.read_sql(query, con=engine)
     meal_id = str(recipe_df['meal_id'].astype(int).max() + 1)
 
-    img_save_fp = './static/images/'+meal_id+'.jpg'
-    urllib.request.urlretrieve(url_for_img, img_save_fp)
+    url_for_img = request.form.get('meal-img-upload')
+    img_source = './static/images/'+meal_id+'.jpg'
+    urllib.request.urlretrieve(url_for_img, img_source)
 
 
     print(request.form.get('recipe-name'))
@@ -113,8 +114,6 @@ def register_recipe():
 
     except Exception as e:
         return(str(e))
-
-
 
 '''
 
