--- a/static/js/uploadr.js.save.1
+++ b/static/js/uploadr.js.save.1
@@ -45,10 +45,6 @@ function doUpload() {
 
     // Collect the form data.
     fd = collectFormData();
-    for(var pair of fd.entries()) {
-          console.log(pair[0]+ ', '+ pair[1]);
-     }
-
 
     // Attach the files.
     for (var i = 0, ie = PENDING_FILES.length; i < ie; i++) {
@@ -56,13 +52,10 @@ function doUpload() {
         fd.append("file", PENDING_FILES[i]);
     }
 
-    for(var pair of fd.entries()) {
-       console.log(pair[0]+ ', '+ pair[1]);
-    }
-
     // Inform the back-end that we're doing this over ajax.
     fd.append("__ajax", "true");
-    
+    console.log("I GOT CALLED!");
+    console.log('fd: ', fd.get('ing-amt-dsf'));
     var xhr = $.ajax({
         xhr: function() {
             var xhrobj = $.ajaxSettings.xhr();
@@ -89,12 +82,9 @@ function doUpload() {
         cache: false,
         data: fd,
         success: function(data) {
-            
           console.log('ready to jsonify'); 
 	   $progressBar.css({"width": "100%"});
-	  /*
-            data = JSON.parse(data);
-	   
+            data = JSON.parse(data);	   
 
             // How'd it go?
             if (data.status === "error") {
@@ -107,15 +97,15 @@ function doUpload() {
                 // Ok! Get the UUID.
                 var uuid = data.msg;
                 window.location = NEXT_URL + uuid;
-            }*/
+            }
             
             console.log("I am guessing it doesnt make it here?");
             window.location ='/search-recipes';
         },
-	error: function(requestObject, error, errorThrown, data){
+	error: function(XMLHttpRequest, textStatus, errorThrown, data){
 		console.log("ERROR THROWN");
 		console.log(errorThrown);
-		console.log(error);
+		console.log(data);
 	},
     });
 }
@@ -150,12 +140,8 @@ function collectFormData() {
         }
 
         fd.append(name, value);
-        console.log("incremental fd: ", Object.keys(fd));
-        console.log('a', fd.get('a'))
+        console.log("incremental fd: ", fd);
     });
-    for(var pair of fd.entries()) {
-  	 console.log('entry: ', pair[0]+ ', '+ pair[1]);
-     }
     console.log('final fd', fd);
     return fd;
 }
